@@ -1,5 +1,15 @@
 2018-04-10  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* riscv-tdep.c (struct riscv_inferior_data): Delete.
+	(riscv_read_misa_reg): Don't cache value read into inferior data.
+	(riscv_new_inferior_data): Delete.
+	(riscv_inferior_data_cleanup): Delete.
+	(riscv_inferior_data): Delete.
+	(riscv_invalidate_inferior_data): Delete.
+	(_initialize_riscv_tdep): Remove initialisation of inferior data.
+
+2018-04-10  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* riscv-tdep.c (riscv_has_feature): Renamed to...
 	(riscv_isa_has_feature): ...this.  Update comments.
 	(riscv_abi_has_feature): New function.
